# gwfolding

./: .gitignore  CITATION.cff  LICENSE  README.md  foldSID.par.txt  pyproject.toml  run_foldSID.py
.github/workflows/: publish.yml
docs/: api.rst  authors.md  citation.md  conf.py  index.md  installation.md  usage.md
gwfolding/: __init__.py  foldSID.py  foldUtils.py  loadSID.py  loadSIDParams.py  writeFSID.py
tests/: conftest.py  frstub.py  test_fold_pipeline.py  test_utils.py
